# wta

./: CHANGELOG.md  Cargo.toml  LICENSE  MANUAL.md  README.md  install.sh
.github/workflows/: release.yml
assets/: screenshot.py
src/: bridge.rs  cli.rs  cost.rs  cron.rs  dash.rs  main.rs  notify.rs  roles.rs  status.rs  supervise.rs  tmux.rs  worktree.rs
