[package]
name = "wta"
version = "0.1.30"
edition = "2021"
rust-version = "1.75"
description = "Run parallel AI coding agents in isolated git worktrees + persistent tmux sessions, from one TUI dashboard"
license = "MIT"
repository = "https://github.com/zakrad/wta"
keywords = ["tmux", "git-worktree", "ai", "agents", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
ratatui     = "0.29"
crossterm   = "0.28"
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
base64      = "0.22"
dirs        = "5"
ansi-to-tui = "7"       # parse tmux `capture-pane -e` SGR codes into colored ratatui spans
unicode-width = "0.2"   # display-width-correct truncation of titles/branches
ureq        = { version = "2", optional = true }

[features]
default = []
# Opt-in remote notifications via Telegram (`wta bridge`). Pulls in TLS, so it's
# off by default to keep the core binary small: build with `--features telegram`.
telegram = ["dep:ureq"]

[profile.release]
strip = true
lto = true
